--- a/application/language/english.json
+++ b/application/language/english.json
@@ -10,16 +10,11 @@
     "add_new_amenity": "Add new amenity",
     "listings": "Listings",
     "add_new_listing": "Add new listing",
-    "cities": "Cities",
-    "add_new_city": "Add new city",
-    "pricings": "Pricings",
-    "all_packages": "All packages",
-    "add_new_package": "Add new package",
     "users": "Users",
     "agent_list": "Agent list",
     "general_users": "General users",
     "add_new_user": "Add new user",
-    "report": "Report",
+    "report": "Battle Report",
     "settings": "Settings",
     "system_settings": "System settings",
     "frontend_settings": "Frontend settings",
@@ -108,19 +103,6 @@
     "seo_meta_tags": "SEO meta tags",
     "saturday_opening": "Saturday opening",
     "closed": "Closed",
-    "saturday_closing": "Saturday closing",
-    "sunday_opening": "Sunday opening",
-    "sunday_closing": "Sunday closing",
-    "monday_opening": "Monday opening",
-    "monday_closing": "Monday closing",
-    "tuesday_opening": "Tuesday opening",
-    "tuesday_closing": "Tuesday closing",
-    "wednesday_opening": "Wednesday opening",
-    "wednesday_closing": "Wednesday closing",
-    "thursday_opening": "Thursday opening",
-    "thursday_closing": "Thursday closing",
-    "friday_opening": "Friday opening",
-    "friday_closing": "Friday closing",
     "website": "Website",
     "email": "Email",
     "phone_number": "Phone number",
@@ -236,7 +218,6 @@
     "package": "Package",
     "date": "Date",
     "actions": "Actions",
-    "whishlist": "Whishlist",
     "account": "Account",
     "listing_edit": "Listing edit",
     "edit_listing": "Edit listing",
@@ -301,11 +282,9 @@
     "listing_updated_successfully": "Listing updated successfully",
     "book_here": "Book here",
     "cover": "Cover",
-    "add_to_wishlist": "Add to wishlist",
     "no_money_charged_in_this_step": "No money charged in this step",
     "added_to_wishlist": "Added to wishlist",
     "remove_from_wishlist": "Remove from wishlist",
-    "wishlists": "Wishlists",
     "price_packages": "Price packages",
     "choose_the_best_package_that_suits_you": "Choose the best package that suits you",
     "categories_per_listing": "Categories per listing",
@@ -349,19 +328,9 @@
     "contacts": "Contacts",
     "find_what_you_need": "Find what you need",
     "popular_categories_wise_listing_is_down_below": "Popular categories wise listing is down below",
-    "purchase_history": "Purchase history",
+    "history": "History",
     "recommended": "Recommended",
-    "pay_with_stripe": "Pay with stripe",
-    "pay_with_paypal": "Pay with paypal",
-    "stripe": "Stripe",
-    "paypal": "Paypal",
     "choose_plan": "Choose plan",
-    "wishlist": "Wishlist",
-    "purchase_histories": "Purchase histories",
-    "purchased_packages": "Purchased packages",
-    "purchase_date": "Purchase date",
-    "expired_date": "Expired date",
-    "payment_method": "Payment method",
     "action": "Action",
     "invoice": "Invoice",
     "hello": "Hello",
@@ -388,7 +357,6 @@
     "terms_and_conditions": "Terms and conditions",
     "faq": "Faq",
     "frequently_asked_question": "Frequently asked question",
-    "creativeitem": "Creativeitem",
     "visit_website": "Visit website",
     "purchase_packages": "Purchase packages",
     "purchase_package": "Purchase package",
@@ -402,7 +370,7 @@
     "update_logo": "Update logo",
     "update_product": "Update product",
     "file": "File",
-    "popular_listings": "Popular listings",
+    "popular_matches": "Popular matches",
     "top_10_high_rated_listings": "Top 10 high rated listings",
     "follow_us": "Follow us",
     "here_is_the_top_categories": "Here is the top categories",
@@ -891,7 +859,7 @@
     "add_new_post": "Add new post",
     "post_list": "Post list",
     "blog_post": "Blog post",
-    "directory": "Directory",
+    "matches": "Matches",
     "all_directories": "All directories",
     "add_new_directory": "Add new directory",
     "claimed_directory": "Claimed directory",
@@ -902,7 +870,6 @@
     "none_verified": "None verified",
     "claim": "Claim",
     "discard_claim": "Discard claim",
-    "this_directory_has_not_been_claimed_by_anyone_yet": "This directory has not been claimed by anyone yet",
     "if_it_is_wrong_to_approve": "If it is wrong to approve",
     "non_verified": "Non verified",
     "this_listing_is_now_valid": "This listing is now valid",
@@ -913,7 +880,7 @@
     "add_validity": "Add validity",
     "full_name_and_phone_number_is_required": "Full name and phone number is required",
     "full_name_and_phone_number_is_re": "Full name and phone number is re",
-    "directories": "Directories",
+    "current_match": "Current Match",
     "remove_verification_status": "Remove verification status",
     "this_listing_is_now_verified": "This listing is now verified",
     "this_listing_is_now_already_verified": "This listing is now already verified",
@@ -959,5 +926,8 @@
     "all_available_addon": "All available addon",
     "all_available_addons": "All available addons",
     "upload_addon_file": "Upload addon file",
-    "addon_installed_successfully": "Addon installed successfully"
+    "addon_installed_successfully": "Addon installed successfully",
+    "directory": "Directory",
+    "directories": "Directories",
+    "cities": "Cities"
 }
