--- a/application/language/english.json
+++ b/application/language/english.json
@@ -396,6 +396,8 @@
     "roster_has_been_deleted": "Roster has been deleted",
     "search_form": "Search Form",
     "search_result": "Search Result",
+    "select_language": "Please Select Language",
+    "select_mode": "Please Select Mode",
     "setup_payment_informations": "Setup payment informations",
     "setup_paypal_settings": "Setup paypal settings",
     "update_paypal_keys": "Update paypal keys",
@@ -527,8 +529,11 @@
     "select_stripe_currency": "Select stripe currency",
     "accept": "Accept",
     "when": "When",
+
     "guests": "Guests",
     "adults": "Adults",
+    "opponent": "Opponent",
+    "your_faction": "Faction(You)",
     "childrens": "Childrens",
     "time": "Time",
     "lunch": "Lunch",
@@ -538,6 +543,9 @@
     "we_are_sorry": "We are sorry",
     "but_the_page_you_are_looking_for_does_not_exist": "But the page you are looking for does not exist",
     "search": "Search",
+    "general_match_list": "All Matches",
+    "search_reject_queue": "Search Cancelled!",
+    "search_queued_successfully_done": "Search queued successfully!",
     "active_matches": "Active matches",
     "our_plans_and_pricings": "Our plans and pricings",
     "we_have_plans_and_prices_that_fit_your_business_perfectly": "We have plans and prices that fit your business perfectly",
@@ -717,6 +725,9 @@
     "take_appointment": "Take appointment",
     "appointment": "Appointment",
     "hour": "Hour",
+    "status":"Status",
+    "opponent_faction": "Opponent Faction",
+    "winner": "Winner",
     "minutes": "Minutes",
     "service": "Service",
     "restauant": "Restauant",
